<resources>
    <string name="app_name">EnigMariage</string>
    <string name="notification_channel_id" translatable="false">wedding_channel</string>
    <string name="splash_titre">"EnigMariage"</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="commencer">Commencer</string>
    <string name="nvlle_partie">Nouvelle Partie</string>
    <string name="continuer">Continuer</string>
    <string name="attention">Attention</string>
    <string name="valider">Valider</string>
    <string name="renvoyer">Renvoyer un message</string>
    <string name="reponse">ta réponse</string>
    <string name="erreurs">Erreur</string>
    <string name="merci">Merci !!</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="pauline">Pauline</string>
    <string name="adrien">Adrien</string>
    <string name="erreur">Ce n’est pas la bonne réponse, réessaye</string>
    <string name="internal_erreur">Une erreur est survenue, merci de réessayer.</string>
    <string name="bonne_reponse">Bravo %s, tu as trouvé !</string>
    <string name="indice">Besoin d’un indice </string>
    <string name="indice_explication">Au cours de ton aventure, un indice appraîtra parfois sous cette forme (attention, en cliquant dessus, cela impactera ton score final) :</string>
    <string name="popup_new_game">Si tu continues, tu perdras ton avancée dans le jeu, souhaites-tu recommencer ?</string>
    <string name="password_titre">(Attention)</string>
    <string name="password_message">"Ce jeu privé est réservé aux invités du mariage. Des indices seront disséminés sur place.

Pour continuer, donnez <b>le lieu</b> où se déroule la cérémonie :"</string>
    <string name="introduction_titre">(Point sur la situation)</string>
    <string name="introduction_top">"Le maléfique Ganondorf, jaloux de la fête sur le bateau souhaite se venger de ne pas avoir été invité.

Il cherche à créer un <b>Elixir</b> réduisant toute vie humaine à l’état de Playmobil …"</string>
    <string name="introduction_versaille">"Regardez, il a déja utilisé un Elixir prototype sur le <b>Château de Versailles</b> :"</string>
    <string name="introduction_Bottom">S’il vous plait, aidez nous à arrêter Ganondorf avant qu’il ne soit trop tard …</string>
    <string name="add_player_titre">(Décline ton identité)</string>
    <string name="add_player_gender">Ton avatar :</string>
    <string name="add_player_clue">Besoin d’aide ?</string>
    <string name="add_player_name">Ton pseudo :</string>
    <string name="add_player_name_hint">Mon nom d’aventurier</string>
    <string name="add_player_femme">Zelda</string>
    <string name="add_player_homme">Link</string>
    <string name="hyrule_desert">Désert Gerudo</string>
    <string name="hyrule_village">Village Cocorico</string>
    <string name="add_player_popup">"Merci %s !
Ouvrons le Carnet de Bord et cherchons le Bateau"</string>
    <string name="embarquement_one_titre">"(Salle d’embarquement)"</string>
    <string name="embarquement_one_message_1">"Certaines personnes l’auraient vu se faufiler entre les invités pour embarquer. Peux-tu trouver des traces de son passage dans cette salle ?"</string>
    <string name="embarquement_one_message_2">"Ses empreintes ressemblent à ça :"</string>
    <string name="embarquement_one_message_3">"Peux-tu inscrire les chiffres que tu verras sur ses empreintes ? </string>
    <string name="embarquement_one_hint">Inscris tes chiffres ici</string>
    <string name="embarquement_two_message_1">Il est donc bien entré … et en plus il utilise notre année de naissance. Il en sait déjà trop sur nous … Il n’y a pas une minute à perdre !</string>
    <string name="embarquement_two_notification_titre">Mouaahaha</string>
    <string name="embarquement_two_notification_message">J’ai infiltré ton téléphone …  signé Ganon</string>
    <string name="embarquement_two_notification_message_retry_1">"As-tu vu la notification ?
Essaye de cliquer dessus pour voir !"</string>
    <string name="embarquement_two_notification_message_retry_2">Si tu ne l’as pas reçue re-clique sur le bouton ci-dessous :</string>
    <string name="embarquement_two_notification_message_retry_3">"Si tu ne reçois vraiment rien,
<b>clique ici</b>"</string>
    <string name="embarquement_three_enigme">FK NKXC VK CKVVO NO MYMUDKSVC</string>
    <string name="embarquement_three_message_1">Ganon a hacké nos téléphones :</string>
    <string name="embarquement_three_message_2">Je viens de recevoir ce mot aussi, c’est peut-être une piste :</string>
    <string name="embarquement_three_help">Même avec l’aide d’un Avocat vous ne m’arrêterez pas</string>
    <string name="embarquement_three_clue">"\"Avocat\" peut aussi se lire :

\"A vaut K\", donc le début du message \"FK\" vaut \"VA\""</string>
    <string name="embarquement_three_question">Peux-tu traduire le message et inscrire la réponse ci-dessous ?</string>
    <string name="embarquement_three_reponse_hint">Traduction du message</string>
    <string name="embarquement_three_reponse_bravo">Bravo, tu peux maintenant monter à Bord !</string>
    <string name="faire_part_titre">"(Vol de Faire Part)"</string>
    <string name="faire_part_message_1">"Ganondorf a utilisé le faire part falsifié pour entrer."</string>
    <string name="faire_part_message_2">"Parmis ces <b>4 Kanjis</b>, lesquels étaient présents sur l’invitation que Ganondorf aurait recopié ?"</string>
    <string name="faire_part_response_message_1">"Bravo, tu as bien trouvé. Je te dois quelques explications maintenant."</string>
    <string name="faire_part_response_message_2">"Si tu souhaites <b>en savoir plus</b> sur l’origine des kanjis choisis, <b>clique</b> sur chacune des images :"</string>
    <string name="faire_part_response_message_3">"Sinon, continue ton investigation à l’aide du bouton ci-dessous"</string>
    <string name="faire_part_kanji_title">"Kanji pour %s"</string>
    <string name="faire_part_kanji_prononciation">"Prononciation :"</string>
    <string name="faire_part_kanji_signification">"Signification :"</string>
    <string name="faire_part_kanji_symbole">"Symbole :"</string>
    <string name="faire_part_kanji_prononciation_p">"Rin ou Suzu"</string>
    <string name="faire_part_kanji_signification_p">"Clochette"</string>
    <string name="faire_part_kanji_symbole_p">"La prononciation se rapproche phonétiquement de Pau’Line’. Ce kanji signifie une petite cloche ou clochette, ce qui rappelle la signification de Klein (petit en Allemand). De plus, la première partie du kanji est le métal, qui correspond à l’élement de l’année de naissance de Pauline. Enfin, si on se réfère au personnage Clochette, il rappelle la passion des Disneys de l’interessée"</string>
    <string name="faire_part_kanji_prononciation_a">"Bu (de Bushido)"</string>
    <string name="faire_part_kanji_signification_a">"Guerrier"</string>
    <string name="faire_part_kanji_symbole_a">"Le prénom rappelle celui d’un empereur Romain. C’est aussi le saint protecteur des soldats. Avec une passion comme le karaté, ce kanji était fait pour lui !"</string>
    <string name="coktail_one_titre">"(Salle des Cocktails)"</string>
    <string name="coktail_one_message">"Il doit bien y avoir un indice quelque part dans cette pièce ? Cherche de nouveau son empreinte et inscris le nombre vu dessus :"</string>
    <string name="coktail_two_message">"<b>2010</b>, c’est notre année de rencontre à Télécom !

A quelle <b>ville</b> correspond la photo de soirée de l’école, juste à côté ?"</string>
    <string name="coktail_two_message_indice">"C’est la ville de notre école Télécom, précisée sur notre site internet"</string>
    <string name="coktail_three_message">"Essayerait-il de cacher son élixir sous forme de cocktail ?

Quelle <b>couleur</b> est typique de Saint Étienne ? C’est peut-être un indice"</string>
    <string name="coktail_four_message">"Je suis sûre que son Elixir sera <b>vert</b> ! Vois-tu du vert dans cette pièce ?

Peut-être qu’on trouvera un des <b>ingrédients</b> à noter ici :"</string>
    <string name="coktail_five_message">"Où peut-il bien trouver du jus de cactus ? Rappelons-nous qu’il vient du monde d’Hyrule. Il a du en ramener d’une de ces régions, à ton avis laquelle ?"</string>
    <string name="coktail_six_message">"Dans ce désert, le peuple Gerudo a dû lui donner un contenant pour transporter son jus de cactus.

<b>Quel est-il ? Indice : c’est un anagramme de Gerudo</b>"</string>
    <string name="coktail_seven_message_1">"Une Gourde, en voilà une ! On dirait qu’une recette est écrite dessus, mais elle est incomplète :"</string>
    <string name="coktail_seven_message_2">"Il manque encore 3 ingrédients, Où les trouver ?"</string>
    <string name="coktail_seven_message_3">"Cette énigme nous indiquera la prochaine salle à fouiller :"</string>
    <string name="diner_one_titre">"Salle de Dîner"</string>
    <string name="diner_one_message_1">"Rends-toi dans la <b>salle de Dîner</b> pour chercher de nouveaux indices ..."</string>
    <string name="diner_one_message_2">"Allons chercher une trace de Ganon sur <b>le plan de table</b> :"</string>
    <string name="diner_two_message">"2012, c’est l’année où nous sommes partis étudier à l’étranger.

Pour connaître le pays, cherche où se sont déroulés <b>les JO en 2010</b> :"</string>
    <string name="diner_two_bravo">"Bravo, tu peux te rendre dans cette destination fraiche ou en choisir une autre sur la carte qui va s'afficher"</string>
    <string name="diner_canada_one_message">"Quel <b>arbre</b>, symbole de ce pays est représenté sur notre faire-part ?"</string>
    <string name="diner_canada_two_message">"Ganon doit certainement vouloir du sirop d’érable comme ingrédient !

Tout d’abord, il a dû collecter la sève. Mais de quel arbre ?
Donne la <b>couleur</b> de ses feuilles :"</string>
    <string name="diner_canada_three_message">"Ensuite il a fait chauffer cette sève à une certaine température pour obtenir du sirop.

<b>Mais laquelle ?</b>"</string>
    <string name="diner_canada_four_message">"104°C, pour évaporer la sève. il ne reste plus qu’à filtrer.

Mais <b>combien de litres de sève</b> nous faudra t’il pour faire un litre de sirop ?"</string>
    <string name="diner_canada_four_indice">"Rappelle-toi, une banane vaut 10, et une pomme 4. Alors une demi pomme ?"</string>
    <string name="diner_canada_five_message">"Ok donc 32L de sève pour 1L de sirop d’érable.

D’apres la gourde, il a besoin de 120L de sirop, <b>combien faudra t’il de sève</b> ?"</string>
    <string name="diner_canada_six_message_1">"Après avoir amassé tout ce sucre, Ganon est parti en quête du prochain ingrédient.

Il a laissé tomber un <b>papier</b> dans la cabane à sucre en partant :"</string>
    <string name="diner_cambodge_three_message_1">"Adrien s’est même entrainé avec l’<b>équipe nationale de Karaté</b> du Cambodge !! Rendez-vous à 6h au dojo tous les matins pour travailler !"</string>
    <string name="diner_cambodge_three_message_2">"Ganon a dû se glisser ici pour copier leurs enchaînements de mouvements, pour devenir plus fort ! <b>Quel Kata représenté en japonais et en Khmer ci-dessous a été copié ?</b>"</string>
    <string name="diner_cambodge_three_reponse_1">"KanKuSho"</string>
    <string name="diner_cambodge_three_reponse_2">"TaEuCho"</string>
    <string name="diner_cambodge_three_reponse_3">"MetsTonPoncho"</string>
    <string name="diner_cambodge_three_reponse_4">"VaAuCachot"</string>
    <string name="diner_cambodge_three_reponse_5">"FaisLeManchot"</string>
    <string name="diner_titre_cambodge">(Dîner au Cambodge)</string>
</resources>