<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_24">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_kanji_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_kanji_title"/>

    <TextView
        android:id="@+id/tv_kanji_title"
        style="@style/Titre"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/faire_part_kanji_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kanji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/kanji_pauline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kanji_title" />

    <TextView
        android:id="@+id/tv_prononciation"
        style="@style/SousTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/faire_part_kanji_prononciation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kanji" />

    <TextView
        android:id="@+id/tv_prononciation_answer"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/faire_part_kanji_prononciation_p"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_prononciation"
        app:layout_constraintStart_toEndOf="@+id/tv_prononciation"
        app:layout_constraintTop_toTopOf="@+id/tv_prononciation" />

    <TextView
        android:id="@+id/tv_signification"
        style="@style/SousTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/faire_part_kanji_signification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prononciation" />

    <TextView
        android:id="@+id/tv_signification_answer"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/faire_part_kanji_signification_p"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_signification"
        app:layout_constraintStart_toEndOf="@+id/tv_signification"
        app:layout_constraintTop_toTopOf="@+id/tv_signification" />

    <TextView
        android:id="@+id/tv_symbole"
        style="@style/SousTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/faire_part_kanji_symbole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signification" />

    <TextView
        android:id="@+id/tv_symbole_answer"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faire_part_kanji_symbole_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_symbole" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>